syntax = "proto3";
package v1;

option go_package = "github.com/ambarg/mini-telegram/internal/pb";

// Client -> Server messages
message SendMessage {
  string uuid = 1;   // client-generated UUID for idempotency
  int64 chat_id = 2;
  string body = 3;
}

message ReadReceipt {
  int64 chat_id = 1;
  int64 msg_id = 2;
}

message Ping {
  int64 timestamp = 1;
}

// Server -> Client messages
message Message {
  int64 msg_id = 1;
  int64 chat_id = 2;
  int64 user_id = 3;
  string body = 4;
  int64 created_at = 5; // Unix timestamp
}

message Delivered {
  string uuid = 1;    // original client UUID
  int64 msg_id = 2;   // server-generated message ID
}

message Presence {
  int64 user_id = 1;
  bool online = 2;
  int64 last_seen = 3; // Unix timestamp
}

message Pong {
  int64 timestamp = 1;
}

// E2EE encrypted envelope (optional feature)
message CipherMessage {
  bytes header = 1;   // ratchet header
  bytes cipher = 2;   // ciphertext
  bytes mac = 3;      // HMAC
}

// Wrapper for all message types
message Frame {
  oneof payload {
    SendMessage send_message = 1;
    ReadReceipt read_receipt = 2;
    Ping ping = 3;
    Message message = 4;
    Delivered delivered = 5;
    Presence presence = 6;
    Pong pong = 7;
    CipherMessage cipher_message = 8;
  }
}
